--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,15 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hola Mundo!</title>
+    <title>PicViewx</title>
+    <link rel="stylesheet" href="../assets/css/photon.min.css">
     <link rel="stylesheet" href="../assets/css/main.css">
     <script src="./frontend.js"></script>
 </head>
 <body>
-    <div>
-        <h1>Hola Mundo</h1>
-        <p>Hola soy una aplicación de Electron</p>
-        <p id="mensaje"></p>
+    <div class="window">
+        <div class="window-content">
+            <div class="pane-group">
+            <div class="pane pane-sm sidebar">
+                    <ul class="list-group">
+                        <li class="list-group-header">
+                            <input class="form-control" type="text" placeholder="Search for someone">
+                        </li>
+                        <li class="list-group-item">
+                            <img class=" media-object pull-left" src="../assets/img/imagen9.jpg"  height="32">
+                            <div class="media-body">
+                            <strong>imagen9.jpg</strong>
+                            <p>5.3 MB</p>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <img class=" media-object pull-left" src="../assets/img/10.jpg"  height="32">
+                            <div class="media-body">
+                            <strong>10.jpg</strong>
+                            <p>65 KB</p>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <img class=" media-object pull-left" src="../assets/img/13.jpg"  height="32">
+                            <div class="media-body">
+                            <strong>13.jpg</strong>
+                            <p>5.6 MB</p>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <img class=" media-object pull-left" src="../assets/img/playa1_atardecer4.jpg"  height="32">
+                            <div class="media-body">
+                            <strong>playa_atardecer4.jpg</strong>
+                            <p>7.5 MB</p>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <img class=" media-object pull-left" src="../assets/img/dc_comics.jpg"  height="32">
+                            <div class="media-body">
+                            <strong>dc_comics.jpg</strong>
+                            <p>101 KB</p>
+                            </div>
+                        </li>
+                    </ul>
+            </div>
+            <div class="pane">
+                <div class="image-view full-height">
+                    <header class="toolbar toolbar-header image-toolbar">
+                        <div class="toolbar-actions">
+                            <div class="btn-group">
+                                <button class="btn btn-default">
+                                    <span class="icon icon-home"></span>
+                                </button>
+                                <button class="btn btn-default">
+                                    <span class="icon icon-folder icon-text"></span>
+                                    Abrir ubicación
+                                </button>
+                            </div>
+                           <!-- <button class="btn btn-default pull-right">
+                                <span class="icon icon-download icon-text"></span>
+                                Guardar
+                            </button>-->
+                            <button class="btn btn-default">
+                                <span class="icon icon-download icon-text"></span>
+                                Guardar
+                            </button>
+                              <select name="" id="filters" class="pull-right select-filter">
+                                <option value="none">Ninguno</option>
+                                <option value="sepia">Sepia</option>
+                              </select>
+                              <label class="pull-right filter-label" for="">Filtros: </label>
+                        </div>
+                    </header>
+                    <div class="image-container">
+                      <img id="image-displayed" src="../assets/img/imagen9.jpg" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        <footer class="toolbar toolbar-footer">
+            <h1 class="title">@VANT3X</h1>
+        </footer>
     </div>
 </body>
 </html>
