--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -18,7 +18,7 @@
                         <li class="list-group-header">
                             <input class="form-control" type="text" placeholder="Search for someone">
                         </li>
-                        <li class="list-group-item">
+                        <li class="list-group-item selected">
                             <img class=" media-object pull-left" src="../assets/img/imagen9.jpg"  height="32">
                             <div class="media-body">
                             <strong>imagen9.jpg</strong>
