--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,6 +7,7 @@
     <title>PicViewx</title>
     <link rel="stylesheet" href="../assets/css/photon.min.css">
     <link rel="stylesheet" href="../assets/css/main.css">
+    <script src="./lib/filterous2-2.0.0.min.js"></script>
     <script src="./frontend.js"></script>
 </head>
 <body>
@@ -16,7 +17,7 @@
             <div class="pane pane-sm sidebar">
                     <ul class="list-group">
                         <li class="list-group-header">
-                            <input id="search-box" class="form-control" type="text" placeholder="Search for someone">
+                            <input id="search-box" class="form-control" type="text" placeholder="Busca una imagen">
                         </li>
                         <li class="list-group-item selected">
                             <img class=" media-object pull-left" src="../assets/img/imagen9.jpg"  height="32">
@@ -77,8 +78,48 @@
                                 Guardar
                             </button>
                               <select name="" id="filters" class="pull-right select-filter">
-                                <option value="none">Ninguno</option>
-                                <option value="sepia">Sepia</option>
+                                <option value="normal" selected>Normal</option>
+                                <option value="1977">1977</option>
+                                <option value="aden">aden</option>
+                                <option value="amaro">amaro</option>
+                                <option value="ashby">ashby</option>
+                                <option value="brannan">brannan</option>
+                                <option value="brooklyn">brooklyn</option>
+                                <option value="charmes">charmes</option>
+                                <option value="clarendon">clarendon</option>
+                                <option value="crema">crema</option>
+                                <option value="dogpatch">dogpatch</option>
+                                <option value="earlybird">earlybird</option>
+                                <option value="gingham">gingham</option>
+                                <option value="ginza">ginza</option>
+                                <option value="hefe">hefe</option>
+                                <option value="helena">helena</option>
+                                <option value="hudson">hudson</option>
+                                <option value="inkwell">inkwell</option>
+                                <option value="juno">juno</option>
+                                <option value="kelvin">kelvin</option>
+                                <option value="lark">lark</option>
+                                <option value="lofi">lofi</option>
+                                <option value="ludwig">ludwig</option>
+                                <option value="maven">maven</option>
+                                <option value="mayfair">mayfair</option>
+                                <option value="moon">moon</option>
+                                <option value="nashville">nashville</option>
+                                <option value="perpetua">perpetua</option>
+                                <option value="reyes">reyes</option>
+                                <option value="rise">rise</option>
+                                <option value="sierra">sierra</option>
+                                <option value="skyline">skyline</option>
+                                <option value="slumber">slumber</option>
+                                <option value="stinson">stinson</option>
+                                <option value="sutro">sutro</option>
+                                <option value="toaster">toaster</option>
+                                <option value="valencia">valencia</option>
+                                <option value="vesper">vesper</option>
+                                <option value="walden">walden</option>
+                                <option value="willow">willow</option>
+                                <option value="xpro2">xpro2</option>
+                               </select>
                               </select>
                               <label class="pull-right filter-label" for="">Filtros: </label>
                         </div>
