comunicación entre procesos

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -64,7 +64,7 @@
                                 <button class="btn btn-default">
                                     <span class="icon icon-home"></span>
                                 </button>
-                                <button class="btn btn-default">
+                                <button id="open-directory" class="btn btn-default">
                                     <span class="icon icon-folder icon-text"></span>
                                     Abrir ubicación
                                 </button>
